<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNotificationActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/new_notification"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:text="@string/category_tag"
        android:textColor="@color/TextColorBlue"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintWidth_percent=".25" />

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_tag"
        android:textColor="@color/TextColorBlue"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryLabel"
        app:layout_constraintWidth_percent=".2" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/date_tag"
        android:textColor="@color/TextColorBlue"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setDateTimeText"
        app:layout_constraintWidth_percent=".1" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/time_tag"
        android:textColor="@color/TextColorBlue"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateLabel"
        app:layout_constraintWidth_percent=".1" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintStart_toEndOf="@+id/titleLabel"
        app:layout_constraintTop_toBottomOf="@+id/careTag"
        app:layout_constraintWidth_percent=".5" />

    <Button
        android:id="@+id/healthTag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_dark"
        android:checked="true"
        android:onClick="selectTag"
        android:padding="5dp"
        android:scrollbarSize="10dp"
        android:text="@string/health_tag"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toEndOf="@+id/categoryLabel"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/careTag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/healthTag"
        android:background="@android:color/holo_orange_dark"
        android:onClick="selectTag"
        android:padding="5dp"
        android:text="@string/care_tag"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toEndOf="@+id/healthTag"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/eventTag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/careTag"
        android:background="@android:color/holo_orange_dark"
        android:onClick="selectTag"
        android:padding="5dp"
        android:text="@string/event_tag"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toEndOf="@+id/careTag"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/otherTag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/eventTag"
        android:background="@android:color/holo_orange_dark"
        android:onClick="selectTag"
        android:padding="5dp"
        android:text="@string/other_tag"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toEndOf="@+id/eventTag"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/setDateTimeText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/setDateTimeText"
        android:textAlignment="viewStart"
        android:textColor="@color/TextColorBlue"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText"
        app:layout_constraintWidth_percent="1" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/date_hint"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintStart_toEndOf="@+id/dateLabel"
        app:layout_constraintTop_toBottomOf="@+id/setDateTimeText"
        app:layout_constraintWidth_percent=".2" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/time_hint"
        android:textAlignment="center"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintWidth_percent=".2"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/timeLabel"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <Button
        android:id="@+id/selectDateButton"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="selectDate"
        android:padding="2dp"
        android:text="@string/pick_date_text"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintHeight_percent=".09"
        app:layout_constraintStart_toEndOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="@+id/setDateTimeText" />

    <Button
        android:id="@+id/selectTimeButton"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="selectTime"
        android:padding="10dp"
        android:text="@string/pick_time_text"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintHeight_percent=".09"
        app:layout_constraintStart_toEndOf="@+id/timeText"
        app:layout_constraintTop_toBottomOf="@+id/selectDateButton" />

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="submitNotification"
        android:padding="10dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".09" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="cancel"
        android:padding="10dp"
        android:text="Ακύρωση"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintHeight_percent=".09"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/everydaySwitch"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="middle"
        android:scrollbarSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setDateTimeText" />

    <Switch
        android:id="@+id/relativesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:scrollbarSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/everydayNotification" />

    <Switch
        android:id="@+id/curatorSwitch"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:scrollbarSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifyRelatives" />

    <TextView
        android:id="@+id/notifyRelatives"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/notifyRelatives"
        android:textColor="@color/TextColorBlue"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/relativesSwitch"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintTop_toBottomOf="@+id/everydayNotification"
        app:layout_constraintWidth_percent=".3" />

    <TextView
        android:id="@+id/everydayNotification"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/notifyEveryday"
        android:textColor="@color/TextColorBlue"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/everydaySwitch"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintTop_toBottomOf="@+id/setDateTimeText"
        app:layout_constraintWidth_percent=".3" />

    <TextView
        android:id="@+id/notifyCurator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/notifyCurator"
        android:textColor="@color/TextColorBlue"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/curatorSwitch"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintTop_toBottomOf="@+id/notifyRelatives"
        app:layout_constraintWidth_percent=".3" />

</android.support.constraint.ConstraintLayout>