<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationTableActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notifications_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/notificationLabels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/categoryLabel"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/category_tag"
            android:textColor="@color/TextColorBlue"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateLabel"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/date_tag"
            android:textColor="@color/TextColorBlue"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeLabel"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/time_tag"
            android:textColor="@color/TextColorBlue"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleLabel"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_tag"
            android:textColor="@color/TextColorBlue"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationLabels">

        <LinearLayout
            android:id="@+id/notificationTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="53dp"
        android:background="@android:color/holo_orange_dark"
        android:backgroundTintMode="add"
        android:text="@string/return_button"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="53dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/exit_button"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>