<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNotificationActivityV2">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_notification"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/enterTitle"
        android:textColor="@color/TextColorBlue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTags" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/cell_border"
        android:textColor="@color/TextColorBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addtitle" />

    <TextView
        android:id="@+id/notifyRelatives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/notifyRelatives"
        android:textColor="@color/TextColorBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifyCurator" />

    <TextView
        android:id="@+id/everydayNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/notifyEveryday"
        android:textColor="@color/TextColorBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <TextView
        android:id="@+id/notifyCurator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/notifyCurator"
        android:textColor="@color/TextColorBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/everydayNotification" />

    <Switch
        android:id="@+id/everydaySwitch"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/everydayNotification"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <Switch
        android:id="@+id/curatorSwitch"
        android:layout_width="44dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/notifyCurator"
        app:layout_constraintTop_toBottomOf="@+id/everydayNotification" />

    <Switch
        android:id="@+id/relativesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/notifyRelatives"
        app:layout_constraintTop_toBottomOf="@+id/notifyCurator" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/selectCategory"
        android:textColor="@color/TextColorBlue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <DatePicker
        android:id="@+id/datePicker"
        style="@android:style/Widget.DatePicker"
        android:layout_width="315dp"
        android:layout_height="194dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:datePickerMode="spinner"
        android:scrollbarSize="10dp"
        app:layout_constraintEnd_toStartOf="@+id/timePicker"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:text="@string/selectDateAndTime"
        android:textColor="@color/TextColorBlue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTags" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="315dp"
        android:layout_height="194dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_orange_dark"
        android:padding="10dp"
        android:text="@string/submit"
        android:onClick="submitNotification"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".09" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="cancel"
        android:padding="10dp"
        android:text="Ακύρωση"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintHeight_percent=".09"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/categoryTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/title"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/categoryText"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <Button
            android:id="@+id/healthTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:background="@android:color/holo_orange_dark"
            android:checked="true"
            android:onClick="selectTag"
            android:padding="10dp"
            android:scrollbarSize="10dp"
            android:text="@string/health_tag"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/eventTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@id/careTag"
            android:background="@android:color/holo_orange_dark"
            android:onClick="selectTag"
            android:padding="10dp"
            android:text="@string/event_tag"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/careTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/healthTag"
            android:background="@android:color/holo_orange_dark"
            android:onClick="selectTag"
            android:padding="10dp"
            android:text="@string/care_tag"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/otherTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@id/eventTag"
            android:background="@android:color/holo_orange_dark"
            android:onClick="selectTag"
            android:padding="10dp"
            android:text="@string/other_tag"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>